tests/errors/arity-too-many/main.pa
def double = fun n {
	n + n
}

def main = double 1 2
